bully-in-kubernetes-main/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bully-app
spec:
  selector:
    matchLabels:
      app: bully-app
  replicas: 2

  template:
    metadata:
      name: bully-app
      labels:
        name: bully-app
        app: bully-app
    spec:
      containers:
        - name: bully-container
          image: bully-app
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
