bully-in-kubernetes-main/k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bully-app
spec:
  serviceName: bully-service
  replicas: 3
  selector:
    matchLabels:
      app: bully-app
  template:
    metadata:
      labels:
        app: bully-app
    spec:
      containers:
        - name: bully-container
          image: bully-app
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              name: http
