bully-in-kubernetes-main/k8s/frontend-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80       # External port
      targetPort: 80 # Internal port on the container
  type: LoadBalancer # For external access
